footer section commit

--- a/index.html
+++ b/index.html
@@ -55,7 +55,67 @@
                 </div>
             </div>
         </section>
+
+        <section class="container">
+            <div class="develop-section-container">
+                <div class="develop-section-image">
+                    <img src="./images/pictures/coding.png" alt="">
+                </div>
+                <div class="develop-section-content">
+                    <h1><span>Develop </span>
+                    <br>    Without Limits</h1>
+                        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
+                        <button id="develop-btn" class="btn">Read the  Documentation</button>
+                </div>
+            </div>
+            <div class="develop-section-container">
+
+                <div class="develop-section-content">
+                    <h1><span>Know our 
+                        </span>
+                    <br>   Global Community</h1>
+                        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
+                        <button id="develop-btn" class="btn">Read the  Documentation</button>
+                </div>
+
+                <div class="develop-section-image">
+                    <img src="./images/pictures/project.png" alt="">
+                </div>
+
+            </div>
+
+            
+        </section>
+
+        <section>
+            <div class="mission-title">
+                <h1>Build <span>Corona Application</span></h1>
+            </div>
+
+            <div class="build-section">
+                <div class="build-section-image">
+                    <img src="./images/pictures/app.png" alt="">
+                </div>
+
+                <div class="build-section-content">
+                    <h1>Stay safe with <br><span> GoCorona.</span></h1>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
+
+                    <button class="btn">App Fetures</button>
+                </div>
+
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <section class="container">
+            <div class="footer-content">
+                <h1>Mission <span id="years">2022</span></h1>
+                <a href="#">Hard work, Perseverance, and Determination for 2022</a>
+            </div>
+        </section>
+    </footer>
     
 </body>
 </html>
